# Auto-Read-Meta-Decks

./: README.md  decks_name.txt  funcAux.py  main.py  requirements.txt  setup.cfg
.github/workflow/: ci.yaml
.github/workflows/: ci.yml  main.yml
src/auto_read/: __init__.py  funcAux.py  main.py
src/auto_read.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/src_files/: decks_name.txt
tests/: test_auto-read.py  test_auto_read.py
